Finalized README and fixed spacing

--- a/src/App.css
+++ b/src/App.css
@@ -33,7 +33,7 @@
 .main-container {
 height: 100vh;
 background-color: #DAD2D8;
-padding: 1.5% 5% 0 5%;;
+padding: 1% 5% 0 5%;;
 margin-top: 1rem;
 }
 
